# rocket_prometheus

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: async-scheduled.yaml  nightly-scheduler.yaml  rust.yml
examples/: main.rs
src/: lib.rs
tests/: default_registry.rs  integration.rs
